[gd_scene load_steps=14 format=3 uid="uid://b0yqy4ho0ov0u"]

[ext_resource type="PackedScene" uid="uid://kduuyif10l0j" path="res://scenes/music/level_1_music.tscn" id="1_8ris2"]
[ext_resource type="Script" path="res://scripts/game_pack.gd" id="1_c78j1"]
[ext_resource type="PackedScene" uid="uid://cc2tnqso80rdb" path="res://scenes/player.tscn" id="1_v5k83"]
[ext_resource type="PackedScene" uid="uid://c35t54lh48252" path="res://scenes/hud.tscn" id="2_nnbwr"]
[ext_resource type="PackedScene" uid="uid://o1rwg5twohkm" path="res://scenes/background_church.tscn" id="3_elvkm"]
[ext_resource type="PackedScene" uid="uid://cf0vg17dh1xxx" path="res://scenes/tile_map.tscn" id="3_w4eye"]
[ext_resource type="PackedScene" uid="uid://w1tah6enxmdw" path="res://scenes/win_screen.tscn" id="4_j8w6a"]
[ext_resource type="PackedScene" uid="uid://xhpdlfg4fipa" path="res://scenes/npc.tscn" id="4_mka5c"]
[ext_resource type="Texture2D" uid="uid://2u7ot0l58dfe" path="res://assets/items/Transparent Icons & Drop Shadow.png" id="5_414kj"]
[ext_resource type="PackedScene" uid="uid://nxye476wpqax" path="res://scenes/item.tscn" id="6_6uooc"]
[ext_resource type="PackedScene" uid="uid://gkrsh06calgh" path="res://scenes/levels/test.tscn" id="6_mqrvp"]
[ext_resource type="PackedScene" uid="uid://dawaw6ovel2vb" path="res://scenes/deathzone.tscn" id="9_k8t5s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_alr7s"]
atlas = ExtResource("5_414kj")
region = Rect2(67, 387, 27, 28)

[node name="GamePack" type="Node2D"]
script = ExtResource("1_c78j1")
textureAtlasItem = SubResource("AtlasTexture_alr7s")

[node name="LevelMusic" parent="." instance=ExtResource("1_8ris2")]

[node name="Hud" type="CanvasLayer" parent="."]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="HUD" parent="Hud" node_paths=PackedStringArray("player") instance=ExtResource("2_nnbwr")]
offset_right = 572.0
offset_bottom = 330.0
player = NodePath("../../Player")

[node name="WinScreen" parent="Hud" instance=ExtResource("4_j8w6a")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 302.0
offset_top = 174.0
offset_right = 302.0
offset_bottom = 174.0
nextLevel = ExtResource("6_mqrvp")
newText = "Has encontrado la piedra de cantu√±a"

[node name="Background" parent="." instance=ExtResource("3_elvkm")]
offset = Vector2(300, 150)
scale = Vector2(0.6, 0.6)
transform = Transform2D(0.6, 0, 0, 0.6, 300, 150)

[node name="TileMap" parent="." instance=ExtResource("3_w4eye")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(36, 221)

[node name="NPC" parent="." instance=ExtResource("4_mka5c")]
position = Vector2(237, 223)

[node name="Player" parent="." instance=ExtResource("1_v5k83")]
position = Vector2(67, 222)

[node name="Item" parent="." instance=ExtResource("6_6uooc")]
position = Vector2(391, 206)

[node name="enemies" type="Node2D" parent="."]

[node name="traps" type="Node2D" parent="."]

[node name="decorations" type="Node2D" parent="."]

[node name="Deathzone" parent="." instance=ExtResource("9_k8t5s")]

[connection signal="hurt_signal" from="Player" to="." method="_on_player_hurt_signal"]
[connection signal="life_updated" from="Player" to="." method="_on_player_life_updated"]
[connection signal="collected" from="Item" to="." method="_on_item_collected"]
[connection signal="body_entered" from="Deathzone" to="." method="_on_deathzone_body_entered"]

[editable path="Background"]
